[gd_scene load_steps=4 format=4 uid="uid://dv2fftuc2m7lb"]

[ext_resource type="Script" uid="uid://cy5p4r5qw4w66" path="res://scenes/levels/Cellar/Cellar.gd" id="1_mu7k0"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_5u8he"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_4053v"]

[node name="Cellar" type="Node2D"]
script = ExtResource("1_mu7k0")

[node name="Ground" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAAFAAIAAAAjAAEAAAAFAAMAAAAjAAIAAAAFAAQAAAAgAAEAAAAGAAIAAAAhAAEAAAAGAAMAAAAgAAAAAAAGAAQAAAAjAAIAAAAHAAIAAAAhAAEAAAAHAAMAAAAgAAEAAAAHAAQAAAAhAAEAAAAIAAIAAAAhAAEAAAAIAAMAAAAgAAEAAAAIAAQAAAAgAAEAAAAJAAIAAAAhAAEAAAAJAAMAAAAhAAEAAAAJAAQAAAAhAAEAAAABAP7/AAAgAAEAAAABAP//AAAgAAEAAAABAAAAAAAjAAIAAAABAAEAAAAhAAEAAAABAAIAAAAjAAIAAAABAAMAAAAjAAIAAAABAAQAAAAgAAEAAAACAP7/AAAgAAIAAAACAP//AAAjAAEAAAACAAAAAAAgAAAAAAACAAEAAAAgAAAAAAACAAIAAAAjAAIAAAACAAMAAAAjAAIAAAACAAQAAAAgAAEAAAADAP7/AAAjAAEAAAADAP//AAAhAAEAAAADAAAAAAAjAAEAAAADAAEAAAAgAAEAAAADAAIAAAAjAAEAAAADAAMAAAAgAAIAAAADAAQAAAAjAAEAAAAEAP7/AAAgAAAAAAAEAP//AAAjAAEAAAAEAAAAAAAgAAEAAAAEAAEAAAAhAAEAAAAEAAIAAAAjAAIAAAAEAAMAAAAgAAEAAAAEAAQAAAAgAAEAAAAFAP7/AAAhAAEAAAAFAP//AAAgAAAAAAAFAAAAAAAjAAEAAAAFAAEAAAAgAAIAAAAGAP7/AAAjAAIAAAAGAP//AAAgAAEAAAAGAAAAAAAhAAEAAAAGAAEAAAAjAAEAAAAHAP7/AAAjAAIAAAAHAP//AAAgAAEAAAAHAAAAAAAgAAAAAAAHAAEAAAAgAAEAAAAIAP7/AAAjAAEAAAAIAP//AAAgAAAAAAAIAAAAAAAjAAEAAAAIAAEAAAAjAAIAAAAJAP7/AAAgAAEAAAAJAP//AAAjAAIAAAAJAAAAAAAgAAAAAAAJAAEAAAAgAAAAAAA=")
tile_set = ExtResource("2_5u8he")

[node name="Floor" type="TileMapLayer" parent="."]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_5u8he")

[node name="Walls" type="TileMapLayer" parent="."]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAAFAAQAAAA1AAAAAAAJAAIAAAAzAAIAAAABAP7/AAA0AAEAAAABAP//AAAzAAIAAAABAAAAAAAzAAIAAAABAAEAAAAzAAMAAAABAAIAAAAFAAoAAAABAAMAAAAzAAEAAAABAAQAAAA0AAIAAAACAP7/AAA1AAAAAAACAAQAAAA1AAAAAAADAP7/AAA1AAAAAAADAAQAAAA1AAAAAAAEAP7/AAA1AAAAAAAEAAQAAAA1AAAAAAAFAP7/AAA1AAAAAAAGAP7/AAA1AAAAAAAGAAEAAAAnAAoAAAAGAAQAAAA1AAAAAAAHAP7/AAA1AAAAAAAHAAQAAAA1AAAAAAAIAP7/AAA1AAAAAAAIAAQAAAA1AAAAAAAJAP7/AAA1AAEAAAAJAP//AAAzAAIAAAAJAAAAAAAzAAIAAAAJAAEAAAAzAAIAAAAJAAMAAAAzAAIAAAAJAAQAAAA1AAIAAAA=")
tile_set = ExtResource("2_5u8he")

[node name="Trails" type="TileMapLayer" parent="."]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_5u8he")

[node name="Items" type="TileMapLayer" parent="."]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_5u8he")

[node name="Demolitonist" parent="Items" instance=ExtResource("3_4053v")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="."]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAAGAAEAAAAnAAoAAAA=")
tile_set = ExtResource("2_5u8he")

[node name="BadItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAACAAAAAAAIABIAAAADAAEAAAAOABMAAAADAAIAAAAOABMAAAAEAAEAAAAOABMAAAAEAAIAAAAOABMAAAAFAP//AAAIABIAAAAFAAMAAAAIABIAAAAHAP//AAAIABAAAAAIAP//AAAJABAAAAAIAAIAAAAOABMAAAAIAAMAAAAOABMAAAA=")
tile_set = ExtResource("2_5u8he")

[node name="GoodItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAACAAAAAAAMABAAAAADAAEAAAAPABAAAAADAAIAAAAPABIAAAAEAAEAAAAQABAAAAAEAAIAAAAQABIAAAAFAP//AAAMABAAAAAFAAMAAAAMABAAAAAHAP//AAAdABEAAAAIAP//AAAeABEAAAAIAAIAAAAMAA8AAAAIAAMAAAASAA4AAAA=")
tile_set = ExtResource("2_5u8he")

[node name="MovingItems" type="TileMapLayer" parent="."]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAAAAAAMABAAAAAFAAEAAAAMABAAAAAFAAIAAAAMABAAAAA=")
tile_set = ExtResource("2_5u8he")
